src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Caption__c</fullName>
        <description>The caption of the question</description>
        <label>Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CascadingLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Cascading Level which this Question belongs to.</description>
        <label>Cascading Level</label>
        <referenceTo>CascadingLevel__c</referenceTo>
        <relationshipLabel>Cascading Levels</relationshipLabel>
        <relationshipName>Cascading_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CascadingSelect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Cascading Select that this question represents(only if the question is of cascading type)</description>
        <label>Cascading Select</label>
        <referenceTo>CascadingSelect__c</referenceTo>
        <relationshipLabel>Cascading Select</relationshipLabel>
        <relationshipName>Cascading_Select</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ControllingQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The controlling question of this question(only for cascading questions)</description>
        <label>Controlling Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Controlling Questions</relationshipLabel>
        <relationshipName>ControllingQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentTime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set date of the day and current time(take from device) as initial value</description>
        <label>Use current date/time as default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoAfter__c</fullName>
        <label>DoAfter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DoBefore__c</fullName>
        <label>DoBefore</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FromVersion__c</fullName>
        <label>First Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hint__c</fullName>
        <description>A hint for the question</description>
        <label>Supporting text / Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsDraft__c</fullName>
        <description>Does the question belong to a survey version that can be edited? (1 = True, 0 = False)</description>
        <formula>IF(
    AND(FromVersion__c &lt;= Survey__r.Version__c,
        OR(ToVersion__c = 0,
        ToVersion__c &gt;= Survey__r.Version__c)
    ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can be edited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsRemoteEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can be edited in downloaded survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxInstance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MaxInstance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PpiResultsField__c</fullName>
        <label>PPI Result Field</label>
        <picklist>
            <picklistValues>
                <fullName>ClientId__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HouseholdSize__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JoinedDate__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geolocation__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerOne__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerTwo__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerThree__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerFour__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerFive__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerSix__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerSeven__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerEight__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerNine__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnswerTen__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousVersionQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous version</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>New version</relationshipLabel>
        <relationshipName>NewVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemoteId__c</fullName>
        <description>The Id of Question as it is in the org that the survey was downloaded from</description>
        <externalId>true</externalId>
        <label>Remote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteServerId__c</fullName>
        <description>Deprecated. Use RemoteId__c as it is indexed</description>
        <label>Remote Server Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepeatSourceValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Source Question to determine the times a repeated question must be repeated</description>
        <label>Repeat Source Value</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Source Question</relationshipLabel>
        <relationshipName>SourceQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepeatTimes__c</fullName>
        <description>The number of times that a question must repeat</description>
        <label>Repeat Times</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this question must be answered before moving to the next question</description>
        <inlineHelpText>Check if this question must be answered before moving to the next question</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SamePage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All questions of a section show on same page</description>
        <label>Show all questions on one page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkipLogicBehavior__c</fullName>
        <label>SkipLogicBehavior</label>
        <picklist>
            <picklistValues>
                <fullName>Show</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SkipLogicOperator__c</fullName>
        <label>SkipLogicOperator</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Any</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SurveyLibrary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Survey Library that the Question was downloaded from</description>
        <label>Remote Library</label>
        <referenceTo>SurveyLibrary__c</referenceTo>
        <relationshipLabel>Question</relationshipLabel>
        <relationshipName>Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ToVersion__c</fullName>
        <label>Last Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>repeat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>text-short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>text-long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>number-integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>number-decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>date-date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>date-datetime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>static-content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>end_of_survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>barcode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gps-location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>picture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cascading-select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cascading-level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IG0000001sjs0MAA_00NG0000008irUDMAY</fullName>
        <active>true</active>
        <booleanFilter>1 AND ((2 OR 3) OR (4 AND 5))</booleanFilter>
        <errorMessage>Parent must be a section or repeat, or cascading select if is cascading level and belong to the same survey.</errorMessage>
        <field>Question__c.Parent__c</field>
        <filterItems>
            <field>Question__c.Survey__c</field>
            <operation>equals</operation>
            <valueField>$Source.Survey__c</valueField>
        </filterItems>
        <filterItems>
            <field>Question__c.Type__c</field>
            <operation>equals</operation>
            <value>section</value>
        </filterItems>
        <filterItems>
            <field>Question__c.Type__c</field>
            <operation>equals</operation>
            <value>repeat</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <value>cascading-level</value>
        </filterItems>
        <filterItems>
            <field>Question__c.Type__c</field>
            <operation>equals</operation>
            <value>cascading-select</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Question_Parent</name>
        <sourceObject>Question__c</sourceObject>
    </namedFilters>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckFinalIntoRepeated</fullName>
        <active>true</active>
        <description>Final questions cannot be added, or moved into a repeated section</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &apos;end_of_survey&apos;) ,
    ISPICKVAL(Parent__r.Type__c, &apos;repeat&apos;)
)</errorConditionFormula>
        <errorMessage>Cannot add or move an end of survey question into a repeated section</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckMinimumNotGreaterThanMaximum</fullName>
        <active>true</active>
        <description>Cannot create a question with Minimum greater than Maximum</description>
        <errorConditionFormula>Minimum__c &gt;  Maximum__c</errorConditionFormula>
        <errorMessage>Cannot create a question with Minimum greater than Maximum</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckParent</fullName>
        <active>true</active>
        <description>Make sure that, unless the question is of type section or repeat, then the question has a parent.</description>
        <errorConditionFormula>AND(
    AND(
        NOT(ISPICKVAL(Type__c, &apos;section&apos;)),
        NOT(ISPICKVAL(Type__c, &apos;repeat&apos;))
    ),
    OR(
        ISNULL(Parent__c),
        ISBLANK(Parent__c)
    )
)</errorConditionFormula>
        <errorMessage>Only questions of type SECTION and REPEAT can have no parent. If question is not a section or repeat then its parent must be a section or repeat</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckRepeatedSourceFields</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
    AND(
     NOT(ISPICKVAL(Type__c,&apos;repeat&apos;)),
     OR(
          NOT(ISNULL(RepeatTimes__c)),
          LEN(RepeatSourceValue__c)&gt;0
       )
        ),
     AND(
     ISPICKVAL(Type__c,&apos;repeat&apos;),
     OR(
        AND(
            NOT(ISNULL(RepeatTimes__c)),
            LEN(RepeatSourceValue__c)&gt;0
         ),AND(
             LEN(RepeatSourceValue__c)&gt;0,
             NOT(ISPICKVAL( RepeatSourceValue__r.Type__c ,&apos;number-integer&apos;))
           )
      )
    )
    )</errorConditionFormula>
        <errorMessage>Repeat Times and Repeat Source Value fields can only be set in Repeat questions,and only one can be set simultaneously</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstVersionLastVersion</fullName>
        <active>true</active>
        <errorConditionFormula>FromVersion__c  &gt; ToVersion__c</errorConditionFormula>
        <errorMessage>The first version value must be lesser or equal than last version</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckCascadingSelectInCascadingQuestions</fullName>
        <active>true</active>
        <description>If question type is cascading select, then this question must be related to a cascading library</description>
        <errorConditionFormula>
            AND(
                ISPICKVAL(Type__c, 'cascading-select') ,
                CascadingSelect__c = '' || CascadingSelect__c = null
            )
        </errorConditionFormula>
        <errorMessage>Cascading select is required for this type of question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckCascadingOnRepeat</fullName>
        <active>true</active>
        <description>If question type is cascading select then parent cannot be repeat section</description>
        <errorConditionFormula>
            AND( 
                ISPICKVAL(Type__c, 'cascading-select') , 
                ISPICKVAL(Parent__r.Type__c, 'repeat')
            )
        </errorConditionFormula>
        <errorMessage>Cascading Selects are not allowed in a Repeat section.</errorMessage>
    </validationRules>
</CustomObject>